fix: Test suite fixes and additional Java 25 refinements after refactoring
Test fixes:
- LoggingTestSuite, UtilTestSuite: fixed test discovery (added TestYLogDataItem, TestStringUtil)
- Authentication tests: JwtManager static initialization fix, YSessionCache cleanup

Source refinements:
- elements/: YDecomposition, YEnabledTransitionSet, YExternalNetElement, YNet, YNetLocalVarVerifier,
  YSpecVersion, YSpecification, YSpecificationValidator, YTask, YIdentifier - additional var/diamond/switch
- engine/: YEngine, YEngineRestorer, YNetData, YNetRunner, YPersistenceManager, WorkItemRecord,
  InterfaceB_EnvironmentBasedClient, CorsFilter - additional modernizations
- stateless/: YNet, YNetLocalVarVerifier, YSpecification, YTask, YIdentifier, YNetRunner,
  YCaseImportExportService, YSpecificationParser, SaxonUtil - additional Java 25 patterns
- util/: HibernateEngine, JDOMUtil, SaxonUtil, StringUtil, XNode, XNodeParser - var/diamond/string API
- unmarshal/: YMetaData additional cleanup
- mailService/MailService: var locals, collection factories

https://claude.ai/code/session_01Q6XzCtWk7ibKmErheFYANF