@@ -41,7 +41,7 @@ public final class YSpecification implements Cloneable, YVerifiable {
     private String _specURI;
     private YNet _rootNet;
     private Map<String, YDecomposition> _decompositions =
-                                        new HashMap<String, YDecomposition>();
+                                        new HashMap<>();
     private String _name;
     private String _documentation;
     private YSchemaVersion _version = YSchemaVersion.defaultVersion();
@@ -141,7 +141,7 @@ public final class YSpecification implements Cloneable, YVerifiable {
 
     public String toXML() {
         StringBuilder xml = new StringBuilder();
-        xml.append(String.format("<specification uri=\"%s\">", JDOMUtil.encodeEscapes(_specURI)));
+        xml.append("<specification uri=\"%s\">".formatted(JDOMUtil.encodeEscapes(_specURI)));
         if (_name != null) xml.append(StringUtil.wrapEscaped(_name, "name"));
         if (_documentation != null) xml.append(StringUtil.wrapEscaped(_documentation, "documentation"));
         xml.append(_metaData.toXML());
@@ -153,7 +153,7 @@ public final class YSpecification implements Cloneable, YVerifiable {
         xml.append("</decomposition>");
 
         // sort decompositions by YNet, then ID
-        var sortedDecompositions = new ArrayList<YDecomposition>(_decompositions.values());
+        var sortedDecompositions = new ArrayList<>(_decompositions.values());
         sortedDecompositions.sort((d1, d2) -> {
             if (d1 instanceof YNet) {
                 if (!(d2 instanceof YNet)) return -1;    // d1 is YNet, d2 is not
@@ -169,7 +169,7 @@ public final class YSpecification implements Cloneable, YVerifiable {
             if (! decomposition.getID().equals(_rootNet.getID())) {
                 String factsType = (decomposition instanceof YNet net) ? "NetFactsType" :
                                                         "WebServiceGatewayFactsType";
-                xml.append(String.format("<decomposition id=\"%s\" xsi:type=\"%s\"%s>",
+                xml.append("<decomposition id=\"%s\" xsi:type=\"%s\"%s>".formatted(
                                decomposition.getID(), factsType,
                                decomposition.getAttributes().toXML()));
 
@@ -328,7 +328,7 @@ public final class YSpecification implements Cloneable, YVerifiable {
     private void checkForEmptyExecutionPaths(YVerificationHandler handler) {
         for (YDecomposition decomposition : _decompositions.values()) {
             if (decomposition instanceof YNet net) {
-                Set<YExternalNetElement> visited = new HashSet<YExternalNetElement>();
+                Set<YExternalNetElement> visited = new HashSet<>();
                 visited.add(net.getInputCondition());
 
                 Set<YExternalNetElement> visiting = getEmptyPostsetAtThisLevel(visited);
@@ -350,7 +350,7 @@ public final class YSpecification implements Cloneable, YVerifiable {
 
     private Set<YExternalNetElement> getEmptyPostsetAtThisLevel(Set<YExternalNetElement> aSet) {
         Set<YExternalNetElement> elements = YNet.getPostset(aSet);
-        Set<YExternalNetElement> resultSet = new HashSet<YExternalNetElement>();
+        Set<YExternalNetElement> resultSet = new HashSet<>();
         for (YExternalNetElement element : elements) {
             if ((element instanceof YCondition cond) || ((element instanceof YTask task) &&
                     (task.getDecompositionPrototype() == null))) {
@@ -364,16 +364,16 @@ public final class YSpecification implements Cloneable, YVerifiable {
     private void checkForInfiniteLoops(YVerificationHandler handler) {
 
         //check infinite loops under rootnet and generate error messages
-        Set<YDecomposition> relevantNets = new HashSet<YDecomposition>();
+        Set<YDecomposition> relevantNets = new HashSet<>();
         relevantNets.add(_rootNet);
         Set<YExternalNetElement> relevantTasks = selectEmptyAndDecomposedTasks(relevantNets);
         checkTheseTasksForInfiniteLoops(relevantTasks, false, handler);
         checkForEmptyTasksWithTimerParams(relevantTasks, handler);
 
         //check infinite loops not under rootnet and generate warning messages
-        Set<YDecomposition> netsBeingUsed = new HashSet<YDecomposition>();
+        Set<YDecomposition> netsBeingUsed = new HashSet<>();
         unfoldNetChildren(_rootNet, netsBeingUsed, null);
-        relevantNets = new HashSet<YDecomposition>(_decompositions.values());
+        relevantNets = new HashSet<>(_decompositions.values());
         relevantNets.removeAll(netsBeingUsed);
         relevantTasks = selectEmptyAndDecomposedTasks(relevantNets);
         checkTheseTasksForInfiniteLoops(relevantTasks, true, handler);
@@ -384,7 +384,7 @@ public final class YSpecification implements Cloneable, YVerifiable {
     private void checkTheseTasksForInfiniteLoops(Set<YExternalNetElement> relevantTasks,
                 boolean generateWarnings, YVerificationHandler handler) {
         for (YExternalNetElement element : relevantTasks) {
-            Set<YExternalNetElement> visited = new HashSet<YExternalNetElement>();
+            Set<YExternalNetElement> visited = new HashSet<>();
             visited.add(element);
 
             Set<YExternalNetElement> visiting = getEmptyTasksPostset(visited);
@@ -419,19 +419,19 @@ public final class YSpecification implements Cloneable, YVerifiable {
 
 
     private Set<YExternalNetElement> selectEmptyAndDecomposedTasks(Set<YDecomposition> relevantNets) {
-        Set<YExternalNetElement> relevantTasks = new HashSet<YExternalNetElement>();
+        Set<YExternalNetElement> relevantTasks = new HashSet<>();
         for (YDecomposition decomposition : relevantNets) {
             relevantTasks.addAll(unfoldNetChildren(decomposition,
-                                 new HashSet<YDecomposition>(), "emptyTasks"));
+                                 new HashSet<>(), "emptyTasks"));
             relevantTasks.addAll(unfoldNetChildren(decomposition,
-                                 new HashSet<YDecomposition>(), "decomposedTasks"));
+                                 new HashSet<>(), "decomposedTasks"));
         }
         return relevantTasks;
     }
 
 
     private Set<YExternalNetElement> getEmptyTasksPostset(Set<YExternalNetElement> set) {
-        Set<YExternalNetElement> resultSet = new HashSet<YExternalNetElement>();
+        Set<YExternalNetElement> resultSet = new HashSet<>();
         for (YExternalNetElement element : set) {
             YTask task = (YTask) element;
             if (task.getDecompositionPrototype() instanceof YNet net) {
@@ -461,10 +461,10 @@ public final class YSpecification implements Cloneable, YVerifiable {
 
 
     private void checkDecompositionUsage(YVerificationHandler handler) {
-        Set<YDecomposition> netsBeingUsed = new HashSet<YDecomposition>();
+        Set<YDecomposition> netsBeingUsed = new HashSet<>();
         unfoldNetChildren(_rootNet, netsBeingUsed, null);
         Set<YDecomposition> specifiedDecompositions =
-                new HashSet<YDecomposition>(_decompositions.values());
+                new HashSet<>(_decompositions.values());
         specifiedDecompositions.removeAll(netsBeingUsed);
 
         for (YDecomposition decomp : specifiedDecompositions) {
@@ -478,13 +478,13 @@ public final class YSpecification implements Cloneable, YVerifiable {
 
     private Set<YExternalNetElement> unfoldNetChildren(YDecomposition decomposition,
                                   Set<YDecomposition> netsAlreadyExplored, String criterion) {
-        Set<YExternalNetElement> resultSet = new HashSet<YExternalNetElement>();
+        Set<YExternalNetElement> resultSet = new HashSet<>();
         netsAlreadyExplored.add(decomposition);
         if (decomposition instanceof YAWLServiceGateway gateway) {
             return resultSet;
         }
-        Set<YExternalNetElement> visited = new HashSet<YExternalNetElement>();
-        Set<YExternalNetElement> visiting = new HashSet<YExternalNetElement>();
+        Set<YExternalNetElement> visited = new HashSet<>();
+        Set<YExternalNetElement> visiting = new HashSet<>();
         visiting.add(((YNet) decomposition).getInputCondition());
         do {
             visited.addAll(visiting);
